crates/erlang_service/fixtures/truncated_integer.erl
-module(truncated_integer).
-export([f/0]).

f() ->
    <<256>>.
